# tyria-kernel

./: Cargo.toml  README.md
.cargo/: config.toml
src/: arch.rs  bootloader.rs  lib.rs  main.rs  page.rs  pollyfill.rs  qemu.rs  sync.rs  utils.rs
src/arch/: amd64.rs
src/bootloader/: limine.rs
targets/: amd64-limine.json  amd64-limine.ld  amd64-limine.sh  limine.conf
