[package]
name = "tyria-kernel"
authors = ["Chlorodose <chlorodose@chlorodose.me>"]
description = "A exo&micro kernel written in rust who focusing on not teaching userspace what to do."
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/chlorodose/tyria-kernel"
license = "MIT OR Apache-2.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"

[features]
limine = ["dep:limine"]
qemu = ["dep:qemu_print"]

[dependencies]
limine = { version = "0.5.0", optional = true }
log = "0.4.29"
qemu_print = {version = "0.1.0", optional = true}
